# LibZPAQFranz

./: .gitmodules  CMakeLists.txt
include/: ZPAQReader.hpp
src/: Compressor.cpp  ZPAQReader.cpp  ZPAQWriter.cpp
